:zap: updates and improvements

--- a/index.html
+++ b/index.html
@@ -1,211 +1,157 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Portfolio</title>
     <!--Font awesome CDN-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
     <!--Scroll reveal CDN-->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="container">
-            <nav class="nav">
-                <div class="menu-toggle">
-                    <i class="fas fa-bars"></i>
-                    <i class="fas fa-times"></i>
-                </div>
-                <a href="index.html" class="nav-link">
-                    <h2 class="">pari.</h2>
-
-                </a>
-                <!--  <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Resume</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Contacts</a>
-                    </li>
-                </ul>-->
-            </nav>
-        </div>
+      <div class="container">
+        <nav class="nav">
+          <a href="index.html" class="nav-link">
+            <h2>pari.</h2>
+          </a>
+        </nav>
+      </div>
     </header>
     <!-- END HEADER -->
 
     <section class="hero" id="hero">
-        <div class="container">
-            <h1 class="headline">3D artist and UX/UI designer</h1>
-            <div class="headline-description">
-                <div class="separator">
-                </div>
-                <div class="single-animation">
-                    <a href="#" class="btn body-btn">Get in touch</a>
-
-                </div>
-            </div>
+      <div class="container">
+        <h1 class="title">3D artist and UX/UI designer</h1>
+        
+        <div class="headline-description">
+          <div class="single-animation">
+            <a href="#" class="btn body-btn accent">
+              <i class="fas fa-caret-right"></i>
+              &nbsp;Get in touch
+            </a>
+          </div>
         </div>
+      </div>
     </section>
     <!-- END HERO SECTION -->
 
-    <section class="discover-our-story">
-        <div class="container">
-            <div class="restaurant-info">
-                <div class="restaurant-description padding-right animate-left">
-                    <div class="global-headline">
-                    </div>
-                    <p1>I am a 3D artist and AR/VR designer with an extensive background in graphics design. My passion is conceiving and developing experiences. The unique way of designing user interfaces and outlining the user experience in these applications fascinates me immensely.
-                    </p1>
-                    <a href="#" class="btn body-btn">See my Curriculum Vitae</a>
-                </div>
-            </div>
-        </div>
+    <section class="global-headline animate-top">
+      <div class="container">
+        <h2 class="introduction">
+          I am a 3D artist and AR/VR designer with an extensive background in
+          graphics design. My passion is conceiving and developing experiences.
+          The unique way of designing user interfaces and outlining the user
+          experience in these applications fascinates me immensely.
+        </h2>
+
+        <a href="#" class="btn body-btn">
+          <i class="fas fa-caret-right"></i>
+          See my Curriculum Vitae
+        </a>
+      </div>
     </section>
+
+    <div class="container divider"></div>
     <!-- END INTRODICTION -->
 
-
-
-
-    <section class="discover-our-story">
-        <div class="container">
-            <div class="restaurant-info">
-                <div class="restaurant-description padding-right animate-left">
-                    <div class="global-headline">
-                        <h1 class="headline headline-dark">BMW AR Application</h1>
-                    </div>
-                    <p>Eind februari 2019 organiseert BMW Jorssen Noord een lanceringsevent voor de nieuwe BMW 3 reeks Berline. Tijdens dit event zet de BMW-concessiehouder innovatieve technologieën centraal, naar analogie met de technische vernuftigheden die de gloednieuwe BMW bezit. Het doel is om enkele virtual en augmented reality-toepassingen te creëren. Ik ga aan de slag en bouw een AR-applicatie en twee hologrammen.
-                    </p>
-                    <a href="#" class="btn body-btn">More</a>
-                </div>
-                <div class="restaurant-info-img animate-right">
-                    <img src="images/Bmw.jpg" alt="Our Story">
-                </div>
-            </div>
+    <section class="project">
+      <div class="project-info">
+        <div
+          class="project-title animate-right global-headline padding-right padding-left-sm"
+        >
+          <h1 class="headline headline-dark">BMW AR Application</h1>
         </div>
+        <div
+          class="project-description animate-right padding-right padding-left-sm"
+        >
+          <p>
+            Eind februari 2019 organiseert BMW Jorssen Noord een lanceringsevent
+            voor de nieuwe BMW 3 reeks Berline. Tijdens dit event zet de
+            BMW-concessiehouder innovatieve technologieën centraal, naar
+            analogie met de technische vernuftigheden die de gloednieuwe BMW
+            bezit. Het doel is om enkele virtual en augmented
+            reality-toepassingen te creëren. Ik ga aan de slag en bouw een
+            AR-applicatie en twee hologrammen.
+          </p>
+          <a href="./projects/bmw-ar/index.html" class="btn body-btn">
+            <i class="fas fa-caret-right"></i>
+            See project
+          </a>
+        </div>
+        <div class="project-img animate-left">
+          <img src="images/Bmw.jpg" alt="Picture of BWM AR Application" />
+        </div>
+      </div>
     </section>
 
-
-    <section class="discover-our-story">
-        <div class="container">
-            <div class="restaurant-info">
-                <div class="restaurant-description padding-right animate-left">
-                    <div class="global-headline">
-                        <h1 class="headline headline-dark">Abilitee</h1>
-                    </div>
-                    <p>Wat als… je gevaarlijke procedures eindeloos kan uittesten in een veilige omgeving? Met die premisse gingen we aan de slag toen we abilitee creëerden met RMDY. Een virtual reality 3D productivity configurator, of ook wel: een virtuele trainingsassistent.
-                    </p>
-                    <a href="#" class="btn body-btn">More</a>
-                </div>
-                <div class="restaurant-info-img animate-right">
-                    <img src="images/Abilitee.png" alt="Our Story">
-                </div>
-            </div>
+    <section class="project">
+      <div class="project-info alt">
+        <div
+          class="project-title animate-left global-headline padding-left padding-right-sm"
+        >
+          <h1 class="headline headline-dark">Abilitee</h1>
         </div>
-    </section>
-
-
-    <section class="discover-our-story">
-        <div class="container">
-            <div class="restaurant-info">
-                <div class="restaurant-description padding-right animate-left">
-                    <div class="global-headline">
-                        <h1 class="headline headline-dark">Technopolis parapent simulator</h1>
-                    </div>
-                    <p>In Technopolis neem je niet alleen een virtuele duikvlucht, je gaat letterlijk de lucht in. Een grijparm heft het harnas op waar je met een VR-bril in zit. Naast het prachtige landschap dat je in virtual reality ziet, voel je ook wind. Je stuurt makkelijk zelf. Je begint op een berg en vliegt tot aan een waterval. Daarna kan je kiezen: rechtdoor, rechts of links. Zo vlieg je verder langs hoge bergtoppen, diepe wateren en mysterieuze kastelen. De beleving duurt ongeveer twee minuten, zelfs al crash je onderweg
-                    </p>
-                    <a href="#" class="btn body-btn">More</a>
-                </div>
-                <div class="restaurant-info-img animate-right">
-                    <img src="images/Bmw.jpg" alt="Our Story">
-                </div>
-            </div>
+        <div
+          class="project-description animate-left padding-left padding-right-sm"
+        >
+          <p>
+            Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
+            veilige omgeving? Met die premisse gingen we aan de slag toen we
+            abilitee creëerden met RMDY. Een virtual reality 3D productivity
+            configurator, of ook wel: een virtuele trainingsassistent.
+          </p>
+          <a href="#" class="btn body-btn">
+            <i class="fas fa-caret-right"></i>
+            See project
+          </a>
         </div>
-    </section>
-    <!-- END DISCOVER OUR STORY SECTON -->
-
-    <!--
-    <section class="discover-our-menu">
-        <div class="container">
-            <div class="restaurant-info">
-                <div class="image-group padding-right animate-left">
-                    <img src="images/menu-group-1.jpg" alt="">
-                    <img src="images/menu-group-2.jpg" alt="">
-                    <img src="images/menu-group-3.jpg" alt="">
-                    <img src="images/menu-group-4.jpg" alt="">
-                </div>
-                <div class="restaurant-description animate-right">
-                    <div class="global-headline">
-                        <h1 class="headline headline-dark">3D modeling</h1>
-                    </div>
-                    <a href="#" class="btn body-btn">More</a>
-                </div>
-            </div>
+        <div class="project-img animate-right">
+          <img src="images/Abilitee.png" alt="Our Story" />
         </div>
+      </div>
     </section>
-    <!-- END DISCOVER OUR MENU -->
-    <!--
-    <section class="culinary-delight">
-        <div class="container">
-            <div class="restaurant-info">
-                <div class="restaurant-description padding-right animate-left">
-                    <div class="global-headline">
-                        <h1 class="headline headline-dark">AR/VR</h1>
-                    </div>
-                    <a href="#" class="btn body-btn">more</a>
-                </div>
-                <div class="image-group">
-                    <img class="animate-top" src="images/delight-group-1.jpg" alt="">
-                    <img class="animate-bottom" src="images/delight-group-2.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- END CULINARY DELIGHT -->
+    <!-- END PROJECT SECTON -->
 
     <footer>
-        <div class="container">
-            <div class="back-to-top">
-                <a href="#hero"><i class="fas fa-chevron-up"></i></a>
-            </div>
+        <div class="back-to-top">
+          <a href="#hero"><i class="fas fa-chevron-up"></i></a>
         </div>
-        <div class="footer-content">
-            <div class="footer-content-about animate-top">
-                <h1>Get in touch</h1>
-                <p>
-                    Feel free to get in touch with me via email
-                </p>
-                <h1>glenn.paridaens@icloud.com</h1>
-            </div>
-            <div class="footer-content-divider animate-bottom">
-                <div class="social-media">
-                    <ul class="social-icons">
-                        <li>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-dribbble"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+      </div>
+      <div class="footer-content padding-left padding-right">
+        <div class="footer-content-about animate-top">
+          <h1>Get in touch</h1>
+          <p>Feel free to get in touch with me via email</p>
+          <h1>glenn.paridaens@icloud.com</h1>
+        </div>
+        <div class="footer-content-divider animate-bottom">
+          <div class="social-media">
+            <ul class="social-icons">
+              <li>
+                <a href="https://instagram.com/paridaens-glenn"><i class="fab fa-instagram"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-dribbble"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
     </footer>
 
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
