--- a/index.html
+++ b/index.html
@@ -1,157 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Portfolio</title>
     <!--Font awesome CDN-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
     <!--Scroll reveal CDN-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <div class="container">
-        <nav class="nav">
-          <a href="index.html" class="nav-link">
-            <h2>pari.</h2>
-          </a>
-        </nav>
-      </div>
+        <div class="container">
+            <nav class="nav">
+                <a href="index.html" class="nav-link">
+                    <h2>pari.</h2>
+                </a>
+            </nav>
+        </div>
     </header>
     <!-- END HEADER -->
 
     <section class="hero" id="hero">
-      <div class="container">
-        <h1 class="title">3D artist and UX/UI designer</h1>
-        
-        <div class="headline-description">
-          <div class="single-animation">
-            <a href="#" class="btn body-btn accent">
-              <i class="fas fa-caret-right"></i>
-              &nbsp;Get in touch
-            </a>
-          </div>
+        <div class="container">
+            <h1 class="title">3D artist and UX/UI designer</h1>
+
+            <div class="headline-description">
+                <div class="single-animation">
+                    <a href="#" class="btn body-btn accent">
+                        <i class="fas fa-caret-right"></i>
+                        &nbsp;Get in touch
+                    </a>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
     <!-- END HERO SECTION -->
 
     <section class="global-headline animate-top">
-      <div class="container">
-        <h2 class="introduction">
-          I am a 3D artist and AR/VR designer with an extensive background in
-          graphics design. My passion is conceiving and developing experiences.
-          The unique way of designing user interfaces and outlining the user
-          experience in these applications fascinates me immensely.
-        </h2>
+        <div class="container">
+            <h2 class="introduction">
+                I am a 3D artist and AR/VR designer with an extensive background in
+                graphics design. My passion is conceiving and developing experiences.
+                The unique way of designing user interfaces and outlining the user
+                experience in these applications fascinates me immensely.
+            </h2>
 
-        <a href="#" class="btn body-btn">
-          <i class="fas fa-caret-right"></i>
-          See my Curriculum Vitae
-        </a>
-      </div>
+            <a href="#" class="btn body-btn">
+                <i class="fas fa-caret-right"></i>
+                See my Curriculum Vitae
+            </a>
+        </div>
     </section>
 
     <div class="container divider"></div>
     <!-- END INTRODICTION -->
 
     <section class="project">
-      <div class="project-info">
-        <div
-          class="project-title animate-right global-headline padding-right padding-left-sm"
-        >
-          <h1 class="headline headline-dark">BMW AR Application</h1>
+        <div class="project-info">
+            <div class="project-title animate-right global-headline padding-right padding-left-sm">
+                <h1 class="headline headline-dark">BMW AR Application</h1>
+            </div>
+            <div class="project-description animate-right padding-right padding-left-sm">
+                <p>
+                    Eind februari 2019 organiseert BMW Jorssen Noord een lanceringsevent
+                    voor de nieuwe BMW 3 reeks Berline. Tijdens dit event zet de
+                    BMW-concessiehouder innovatieve technologieën centraal, naar
+                    analogie met de technische vernuftigheden die de gloednieuwe BMW
+                    bezit. Het doel is om enkele virtual en augmented
+                    reality-toepassingen te creëren. Ik ga aan de slag en bouw een
+                    AR-applicatie en twee hologrammen.
+                </p>
+                <a href="./projects/bmw-ar/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-left">
+                <img src="images/Bmw.jpg" alt="Picture of BWM AR Application" />
+            </div>
         </div>
-        <div
-          class="project-description animate-right padding-right padding-left-sm"
-        >
-          <p>
-            Eind februari 2019 organiseert BMW Jorssen Noord een lanceringsevent
-            voor de nieuwe BMW 3 reeks Berline. Tijdens dit event zet de
-            BMW-concessiehouder innovatieve technologieën centraal, naar
-            analogie met de technische vernuftigheden die de gloednieuwe BMW
-            bezit. Het doel is om enkele virtual en augmented
-            reality-toepassingen te creëren. Ik ga aan de slag en bouw een
-            AR-applicatie en twee hologrammen.
-          </p>
-          <a href="./projects/bmw-ar/index.html" class="btn body-btn">
-            <i class="fas fa-caret-right"></i>
-            See project
-          </a>
-        </div>
-        <div class="project-img animate-left">
-          <img src="images/Bmw.jpg" alt="Picture of BWM AR Application" />
-        </div>
-      </div>
     </section>
 
     <section class="project">
-      <div class="project-info alt">
-        <div
-          class="project-title animate-left global-headline padding-left padding-right-sm"
-        >
-          <h1 class="headline headline-dark">Abilitee</h1>
+        <div class="project-info alt">
+            <div class="project-title animate-left global-headline padding-left padding-right-sm">
+                <h1 class="headline headline-dark">Abilitee</h1>
+            </div>
+            <div class="project-description animate-left padding-left padding-right-sm">
+                <p>
+                    Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
+                    veilige omgeving? Met die premisse gingen we aan de slag toen we
+                    abilitee creëerden met RMDY. Een virtual reality 3D productivity
+                    configurator, of ook wel: een virtuele trainingsassistent.
+                </p>
+                <a href="#" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-right">
+                <img src="images/Abilitee.png" alt="Our Story" />
+            </div>
         </div>
-        <div
-          class="project-description animate-left padding-left padding-right-sm"
-        >
-          <p>
-            Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
-            veilige omgeving? Met die premisse gingen we aan de slag toen we
-            abilitee creëerden met RMDY. Een virtual reality 3D productivity
-            configurator, of ook wel: een virtuele trainingsassistent.
-          </p>
-          <a href="#" class="btn body-btn">
-            <i class="fas fa-caret-right"></i>
-            See project
-          </a>
+    </section>
+
+    <section class="project">
+        <div class="project-info">
+            <div class="project-title animate-right global-headline padding-right padding-left-sm">
+                <h1 class="headline headline-dark">Technopolis Parapente</h1>
+            </div>
+            <div class="project-description animate-right padding-right padding-left-sm">
+                <p>
+                    In Technopolis neem je niet alleen een virtuele duikvlucht, je gaat letterlijk de lucht in. Een grijparm heft het harnas op waar je met een VR-bril in zit. Naast het prachtige landschap dat je in virtual reality ziet, voel je ook wind. Je stuurt makkelijk zelf. Je begint op een berg en vliegt tot aan een waterval. Daarna kan je kiezen: rechtdoor, rechts of links. Zo vlieg je verder langs hoge bergtoppen, diepe wateren en mysterieuze kastelen. De beleving duurt ongeveer twee minuten, zelfs al crash je onderweg
+                </p>
+                <a href="./projects/bmw-ar/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-left">
+                <img src="images/Technopolis_Parapent.png" alt="Picture of Parapent" />
+            </div>
         </div>
-        <div class="project-img animate-right">
-          <img src="images/Abilitee.png" alt="Our Story" />
+    </section>
+
+    <section class="project">
+        <div class="project-info alt">
+            <div class="project-title animate-left global-headline padding-left padding-right-sm">
+                <h1 class="headline headline-dark">Windturbine ZF</h1>
+            </div>
+            <div class="project-description animate-left padding-left padding-right-sm">
+                <p>
+                    Het marketing- en communicatiebureau King of Hearts krijgt van hun klant ZF Wind Power de vraag om met “iets indrukwekkend” op de beurs WindEnergy Hamburg te staan. Als wereldwijde leverancier van tandwielkasten voor windturbines is het niet zo vanzelfsprekend om je gigantische onderdelen op een beurs op te stellen. Bovendien is hun nieuwste ontwikkeling nog niet gebouwd en zijn ze genoodzaakt om naar andere middelen te grijpen voor de introductie hiervan. King of Hearts stelt een AR-toepassing voor en komt bij ons terecht via Glenn, hun voormalige stagiair en onze huidige collega.
+                </p>
+                <a href="#" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-right">
+                <img src="images/Koh-tablet.png" alt="Our Story" />
+            </div>
         </div>
-      </div>
+    </section>
+
+
+    <section class="project">
+        <div class="project-info">
+            <div class="project-title animate-right global-headline padding-right padding-left-sm">
+                <h1 class="headline headline-dark">Nostalgeo</h1>
+            </div>
+            <div class="project-description animate-right padding-right padding-left-sm">
+                <p>
+                    Text nostalgeo
+                </p>
+                <a href="./projects/bmw-ar/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-left">
+                <img src="images/nostalgeo.png" alt="Picture of Parapent" />
+            </div>
+        </div>
+    </section>
+
+    <section class="project">
+        <div class="project-info alt">
+            <div class="project-title animate-left global-headline padding-left padding-right-sm">
+                <h1 class="headline headline-dark">Client</h1>
+            </div>
+            <div class="project-description animate-left padding-left padding-right-sm">
+                <p>
+                    Add text
+                </p>
+                <a href="#" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-right">
+                <img src="images/Koh-tablet.png" alt="Our Story" />
+            </div>
+        </div>
     </section>
     <!-- END PROJECT SECTON -->
 
     <footer>
         <div class="back-to-top">
-          <a href="#hero"><i class="fas fa-chevron-up"></i></a>
+            <a href="#hero"><i class="fas fa-chevron-up"></i></a>
         </div>
-      </div>
-      <div class="footer-content padding-left padding-right">
-        <div class="footer-content-about animate-top">
-          <h1>Get in touch</h1>
-          <p>Feel free to get in touch with me via email</p>
-          <h1>glenn.paridaens@icloud.com</h1>
         </div>
-        <div class="footer-content-divider animate-bottom">
-          <div class="social-media">
-            <ul class="social-icons">
-              <li>
-                <a href="https://instagram.com/paridaens-glenn"><i class="fab fa-instagram"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-dribbble"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <div class="footer-content padding-left padding-right">
+            <div class="footer-content-about animate-top">
+                <h1>Get in touch</h1>
+                <p>Feel free to get in touch with me via email</p>
+                <h1>glenn.paridaens@icloud.com</h1>
+            </div>
+            <div class="footer-content-divider animate-bottom">
+                <div class="social-media">
+                    <ul class="social-icons">
+                        <li>
+                            <a href="https://instagram.com/paridaens-glenn"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fab fa-dribbble"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
     </footer>
 
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
