--- a/projects/bmw-ar/index.html
+++ b/projects/bmw-ar/index.html
@@ -1,1 +1,99 @@
-BMW!!!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Portfolio</title>
+    <!--Font awesome CDN-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+    <!--Scroll reveal CDN-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <nav class="nav">
+                <a href="index.html" class="nav-link">
+                    <h2>pari.</h2>
+                </a>
+            </nav>
+        </div>
+    </header>
+    <!-- END HEADER -->
+
+    <section class="hero" id="hero">
+        <div class="container">
+            <h1 class="title">Project Name</h1>
+
+            <div class="headline-description">
+                <div class="single-animation">
+                    <a href="#" class="btn body-btn accent">
+                        <i class="fas fa-caret-right"></i>
+                        &nbsp;Get in touch
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END HERO SECTION -->
+
+    <section class="global-headline animate-top">
+        <div class="container">
+            <h2 class="introduction">
+                I am a 3D artist and AR/VR designer with an extensive background in
+                graphics design. My passion is conceiving and developing experiences.
+                The unique way of designing user interfaces and outlining the user
+                experience in these applications fascinates me immensely.
+            </h2>
+
+            <a href="#" class="btn body-btn">
+                <i class="fas fa-caret-right"></i>
+                See my Curriculum Vitae
+            </a>
+        </div>
+    </section>
+
+    <div class="container divider"></div>
+    <!-- END INTRODICTION -->
+
+    <section class="project">
+        <div class="project-info">
+            <div class="project-title animate-right global-headline padding-right padding-left-sm">
+                <h1 class="headline headline-dark">BMW AR Application</h1>
+            </div>
+            <div class="project-description animate-right padding-right padding-left-sm">
+                <p>
+                    Eind februari 2019 organiseert BMW Jorssen Noord een lanceringsevent
+                    voor de nieuwe BMW 3 reeks Berline. Tijdens dit event zet de
+                    BMW-concessiehouder innovatieve technologieën centraal, naar
+                    analogie met de technische vernuftigheden die de gloednieuwe BMW
+                    bezit. Het doel is om enkele virtual en augmented
+                    reality-toepassingen te creëren. Ik ga aan de slag en bouw een
+                    AR-applicatie en twee hologrammen.
+                </p>
+                <a href="./projects/bmw-ar/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-left">
+                <img src="images/Bmw.jpg" alt="Picture of BWM AR Application" />
+            </div>
+        </div>
+    </section>
+
+
+
+   
+    <!-- END PROJECT SECTON -->
+
+
+    <script src="main.js"></script>
+</body>
+
+</html>
