:bug: fix css bmw-ar

--- a/projects/bmw-ar/index.html
+++ b/projects/bmw-ar/index.html
@@ -11,7 +11,7 @@
     <!--Scroll reveal CDN-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
