Update social links

--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
                 <div class="social-media">
                     <ul class="social-icons">
                         <li>
-                            <a href="https://instagram.com/paridaens-glenn"><i class="fab fa-instagram"></i></a>
+                            <a href="www.linkedin.com/in/glenn-paridaens"><i class="fab fa-linkedin-in"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.instagram.com/glennparidaens/"><i class="fab fa-instagram"></i></a>
                         </li>
-                        <li>
+                       <!-- <li>
                             <a href="#"><i class="fab fa-dribbble"></i></a>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
             </div>
