--- a/projects/bmw-ar/index.html
+++ b/projects/bmw-ar/index.html
@@ -26,7 +26,7 @@
     </header>
     <!-- END HEADER -->
 
-    <section class="hero" id="hero">
+    <section class="heroproject" id="project">
         <div class="container">
             <h1 class="title">
             </h1>
