Update project page
List and grid

--- a/projects/bmw-ar/index.html
+++ b/projects/bmw-ar/index.html
@@ -43,22 +43,45 @@
 
     <section class="global-headline animate-top">
         <div class="container">
-            <h1 class="titleproject">Project name.</h1>
+            <h1 class="titleproject">Abilitee training simulator</h1>
         </div>
     </section>
 
     <section class="project">
+       
         <div class="project-info alt">
             <div class="project-title animate-left global-headline padding-left padding-right-sm">
-                <h1 class="headline headline-dark">Abilitee</h1>
+                <h1 class="headline headline-dark">Task</h1>
             </div>
             <div class="project-description animate-left padding-left padding-right-sm">
                 <p>
-                    Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
-                    veilige omgeving? Met die premisse gingen we aan de slag toen we
-                    abilitee creëerden met RMDY. Een virtual reality 3D productivity
-                    configurator, of ook wel: een virtuele trainingsassistent.
+                    Date 
                 </p>
+                <p>
+                    2017-2020
+                </p>
+                <p>
+                    What did i contribute
+                </p>
+                <ul>
+                    <li>UX/UI</li>
+                    <li>Unity Development</li>
+                    <li>3D modelling</li>
+                    <li>3D texturing</li>
+                    <li>Animation</li>
+
+                  </ul>
+                <div class="project-title animate-left global-headline padding-left padding-right-sm">
+                    <h1 class="headline headline-dark">Summary</h1>
+                </div>
+                <div class="project-description animate-left padding-left padding-right-sm">
+                    <p>
+                        Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
+                        veilige omgeving? Met die premisse gingen we aan de slag toen we
+                        abilitee creëerden met RMDY. Een virtual reality 3D productivity
+                        configurator, of ook wel: een virtuele trainingsassistent.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
