Update client showcase
Added basic grid style for showcase

--- a/index.html
+++ b/index.html
@@ -192,6 +192,22 @@
     </section>
     <!-- END PROJECT SECTON -->
 
+    <section class="grid-showcase"></section>
+      <div class="grid">
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+        <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
+      </div>
+    </section>
+    <!-- END Client showcase -->
+
     <footer>
         <div class="back-to-top">
             <a href="#hero"><i class="fas fa-chevron-up"></i></a>
