--- a/index.html
+++ b/index.html
@@ -152,13 +152,39 @@
 
 
     <section class="project">
+        <div class="project-info alt">
+            <div class="project-title animate-left global-headline padding-left padding-right-sm">
+                <h1 class="headline headline-dark">Diagnose Car Hololens</h1>
+            </div>
+            <div class="project-description animate-left padding-left padding-right-sm">
+                <p>
+                    Diagnose Car het bedrijf dat toegang aan scholen om nieuwe mechaniekers
+opleiden. Ze ondersteunen opleidingen voor werkzoekenden en jongeren. Het bedrijf
+gaat mee met industrie-4 en zorgt ervoor dat mechaniekers zich steeds verder kunnen ontwikkelen. Om de
+toegankelijk te vergroten bouwen we een HoloLens applicatie waar de student de Nissan leaf spanningsvrij
+kan schakelen. En de leerkracht virtueel les kan geven.
+                </p>
+                <a href="#" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-right">
+                <img src="images/Hololens.png" alt="Our Story" />
+            </div>
+        </div>
+    </section>
+
+    <section class="project">
         <div class="project-info">
             <div class="project-title animate-right global-headline padding-right padding-left-sm">
                 <h1 class="headline headline-dark">Nostalgeo</h1>
             </div>
             <div class="project-description animate-right padding-right padding-left-sm">
                 <p>
-                    Text nostalgeo
+                    Nostalgeo is een product van Nazka Mapps dat zich specialiseert in slimme kaarten, 
+                    interactieve kaarttoepassingen en ruimtelijke analyse. 
+                    Naast Nostalgeo is het ook de drijvende kracht achter Aircheckr.com en andere digitale kaarttoepassingen.
                 </p>
                 <a href="./projects/bmw-ar/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
@@ -170,28 +196,8 @@
             </div>
         </div>
     </section>
-
-    <section class="project">
-        <div class="project-info alt">
-            <div class="project-title animate-left global-headline padding-left padding-right-sm">
-                <h1 class="headline headline-dark">Client</h1>
-            </div>
-            <div class="project-description animate-left padding-left padding-right-sm">
-                <p>
-                    Add text
-                </p>
-                <a href="#" class="btn body-btn">
-                    <i class="fas fa-caret-right"></i>
-                    See project
-                </a>
-            </div>
-            <div class="project-img animate-right">
-                <img src="images/Koh-tablet.png" alt="Our Story" />
-            </div>
-        </div>
-    </section>
     <!-- END PROJECT SECTON -->
-
+<!--
     <section class="grid-showcase"></section>
       <div class="grid">
         <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
@@ -205,7 +211,7 @@
         <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
         <div> <img src="images/DSM_Logo.png" alt="Logo" /></div>
       </div>
-    </section>
+    </section>-->
     <!-- END Client showcase -->
 
     <footer>
