Update Project pages
Added more project pages

--- a/projects/Abilitee/index.html
+++ b/projects/Abilitee/index.html
@@ -43,7 +43,7 @@
 
     <section class="global-headline animate-top">
         <div class="container">
-            <h1 class="titleproject">BMW Jorssen</h1>
+            <h1 class="titleproject">Abilitee training simulator</h1>
         </div>
     </section>
 <!--
@@ -90,15 +90,15 @@
    
     <section class="project-overview">
 <div id="over" class="">
-    <img src="/images/BMW_Holo.jpg">
+    <img src="/images/Abilitee.png">
   </div>
         
   <div id="over" class="">
-    <img src="/images/JorssenNoord.jpg">
+    <img src="/images/Abilitee_Event.jpg">
   </div>
 
   <div id="over" class="">
-    <img src="/images/BMWAR.jpg">
+    <img src="/images/Abilitee.png">
   </div>
   
 </section>
