--- a/projects/DiagnoseCar/index.html
+++ b/projects/DiagnoseCar/index.html
@@ -43,7 +43,7 @@
 
     <section class="global-headline animate-top">
         <div class="container">
-            <h1 class="titleproject">BMW Jorssen</h1>
+            <h1 class="titleproject">Diagnose Car Hololens</h1>
         </div>
     </section>
 <!--
@@ -86,23 +86,24 @@
         </div>
     </section>
     -->
+    <!--
     <div class="container divider"></div>
    
     <section class="project-overview">
 <div id="over" class="">
-    <img src="/images/BMW_Holo.jpg">
+    <img src="/images/Abilitee.png">
   </div>
         
   <div id="over" class="">
-    <img src="/images/JorssenNoord.jpg">
+    <img src="/images/Abilitee_Event.jpg">
   </div>
 
   <div id="over" class="">
-    <img src="/images/BMWAR.jpg">
+    <img src="/images/Abilitee.png">
   </div>
   
 </section>
-
+-->
 
     <!-- END INTRODICTION -->
  <!--
