--- a/projects/Technopolis/index.html
+++ b/projects/Technopolis/index.html
@@ -43,7 +43,7 @@
 
     <section class="global-headline animate-top">
         <div class="container">
-            <h1 class="titleproject">BMW Jorssen</h1>
+            <h1 class="titleproject">Technopolis Parapente</h1>
         </div>
     </section>
 <!--
@@ -90,17 +90,12 @@
    
     <section class="project-overview">
 <div id="over" class="">
-    <img src="/images/BMW_Holo.jpg">
+    <img src="/images/Parapente1.png">
   </div>
         
   <div id="over" class="">
-    <img src="/images/JorssenNoord.jpg">
+    <img src="/images/Parapente2.png">
   </div>
-
-  <div id="over" class="">
-    <img src="/images/BMWAR.jpg">
-  </div>
-  
 </section>
 
 
