Update Project Pages
Name changes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     abilitee creëerden met RMDY. Een virtual reality 3D productivity
                     configurator, of ook wel: een virtuele trainingsassistent.
                 </p>
-                <a href="#" class="btn body-btn">
+                <a href="./projects/Abilitee/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     See project
                 </a>
@@ -119,7 +119,7 @@
                 <p>
                     In Technopolis neem je niet alleen een virtuele duikvlucht, je gaat letterlijk de lucht in. Een grijparm heft het harnas op waar je met een VR-bril in zit. Naast het prachtige landschap dat je in virtual reality ziet, voel je ook wind. Je stuurt makkelijk zelf. Je begint op een berg en vliegt tot aan een waterval. Daarna kan je kiezen: rechtdoor, rechts of links. Zo vlieg je verder langs hoge bergtoppen, diepe wateren en mysterieuze kastelen. De beleving duurt ongeveer twee minuten, zelfs al crash je onderweg
                 </p>
-                <a href="./projects/bmw-ar/index.html" class="btn body-btn">
+                <a href="./projects/Technopolis/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     See project
                 </a>
@@ -139,7 +139,7 @@
                 <p>
                     Het marketing- en communicatiebureau King of Hearts krijgt van hun klant ZF Wind Power de vraag om met “iets indrukwekkend” op de beurs WindEnergy Hamburg te staan. Als wereldwijde leverancier van tandwielkasten voor windturbines is het niet zo vanzelfsprekend om je gigantische onderdelen op een beurs op te stellen. Bovendien is hun nieuwste ontwikkeling nog niet gebouwd en zijn ze genoodzaakt om naar andere middelen te grijpen voor de introductie hiervan. King of Hearts stelt een AR-toepassing voor en komt bij ons terecht via Glenn, hun voormalige stagiair en onze huidige collega.
                 </p>
-                <a href="#" class="btn body-btn">
+                <a href="./projects/ZF/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     See project
                 </a>
@@ -164,7 +164,7 @@ gaat mee met industrie-4 en zorgt ervoor dat mechaniekers zich steeds verder kun
 toegankelijk te vergroten bouwen we een HoloLens applicatie waar de student de Nissan leaf spanningsvrij
 kan schakelen. En de leerkracht virtueel les kan geven.
                 </p>
-                <a href="#" class="btn body-btn">
+                <a href="./projects/DiagnoseCar/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     See project
                 </a>
@@ -186,13 +186,13 @@ kan schakelen. En de leerkracht virtueel les kan geven.
                     interactieve kaarttoepassingen en ruimtelijke analyse. 
                     Naast Nostalgeo is het ook de drijvende kracht achter Aircheckr.com en andere digitale kaarttoepassingen.
                 </p>
-                <a href="./projects/bmw-ar/index.html" class="btn body-btn">
+                <a href="./projects/Nostalgeo/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     See project
                 </a>
             </div>
             <div class="project-img animate-left">
-                <img src="images/nostalgeo.png" alt="Picture of Parapent" />
+                <img src="images/nostalgeo.png" alt="Picture of Nostalgeo" />
             </div>
         </div>
     </section>
