--- a/projects/Nostalgeo/index.html
+++ b/projects/Nostalgeo/index.html
@@ -43,7 +43,7 @@
 
     <section class="global-headline animate-top">
         <div class="container">
-            <h1 class="titleproject">Abilitee training simulator</h1>
+            <h1 class="titleproject">Nostalgeo</h1>
         </div>
     </section>
 <!--
@@ -86,6 +86,7 @@
         </div>
     </section>
     -->
+    <!--
     <div class="container divider"></div>
    
     <section class="project-overview">
@@ -102,7 +103,7 @@
   </div>
   
 </section>
-
+-->
 
     <!-- END INTRODICTION -->
  <!--
