Update All pages
added flexbox elements and grid elements,
testing (needs some cleanup)

--- a/projects/Abilitee/index.html
+++ b/projects/Abilitee/index.html
@@ -79,7 +79,8 @@
         <div class="project-description animate-right">
         <ul class="item item-B">
           <p> Date  &nbsp  &nbsp  2017-2020</p>
-          <p> Contribution &nbsp
+          <p> Contribution 
+            <ul class="align-right">
             <li>UX/UI</li>
             <li>Unity Development</li>
             <li>3D modelling</li>
