:zap: general improvements and fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
             <nav class="nav">
-                <a href="index.html" class="nav-link">
+                <a href="/" class="nav-link">
                     <h2>pari.</h2>
                 </a>
             </nav>
@@ -32,7 +32,7 @@
 
             <div class="headline-description">
                 <div class="single-animation">
-                    <a href="#" class="btn body-btn accent">
+                    <a href="mailto:glenn.paridaens@icloud.com" class="btn body-btn accent">
                         <i class="fas fa-caret-right"></i>
                         &nbsp;Get in touch
                     </a>
@@ -62,27 +62,23 @@
     <!-- END INTRODICTION -->
 
     <section class="global-headline animate-top">
-        <h1 class="headline headline-dark">Let's make something amazing</h1>
-    <ul class="skills-flex-container">
+        <ul class="skills-flex-container">
+            <h1 class="headline headline-dark">Let's make something amazing</h1>
         <li class="skill-flex">
             <h1 class="headline headline-dark">3D Design</h1>
-                <p>
-                    Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
-                    veilige omgeving? Met die premisse gingen we aan de slag toen we
-                    abilitee creëerden met RMDY. Een virtual reality 3D productivity
-                    configurator.
-                </p>
+                <p2>
+                  Some 3D designs made in Blender or Fusion 360.
+                </p2>
                 <a href="#" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     More Projects
                 </a>
          </li>
          <li class="skill-flex">
-            <h1 class="headline headline-dark">UX/UI</h1>
-                <p>
-                    Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
-                    veilige omgeving? Met die premisse gingen we aan de slag.
-                </p>
+            <h1 class="headline-dark-medium">UX/UI</h1>
+                <p2>
+                    Here are some of my project i did the UX/UI for.
+                </p2>
                 <a href="#" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     More Projects
@@ -90,12 +86,9 @@
          </li>
          <li class="skill-flex">
             <h1 class="headline headline-dark">AR/VR</h1>
-                <p>
-                    Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
-                    veilige omgeving? Met die premisse gingen we aan de slag toen we
-                    abilitee creëerden met RMDY. Een virtual reality 3D productivity
-                    configurator, of ook wel: een virtuele trainingsassistent.
-                </p>
+                <p2>
+                   Some of my Augmented and Virtual reality projects made in Unity.
+                </p2>
                 <a href="#" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     More Projects
@@ -103,17 +96,16 @@
          </li>
          <li class="skill-flex">
             <h1 class="headline headline-dark">Unity</h1>
-                <p>
-                    Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
-                    veilige omgeving? Met die premisse gingen we aan de slag toen we
-                    abilitee creëerden met RMDY.
-                </p>
+                <p2>
+                    Some projects made in Unity.
+                </p2>
                 <a href="#" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     More Projects
                 </a>
          </li>
-      </ul>
+ 
+    </ul>
     </section>
        <!-- 
     <div class="card-group">
