--- a/projects/bmw-ar/index.html
+++ b/projects/bmw-ar/index.html
@@ -27,6 +27,7 @@
     <!-- END HEADER -->
 
     <section class="heroproject" id="project">
+        <img src="/images/BMWAR.jpg">
         <div class="container">
             <h1 class="title">
             </h1>
@@ -93,6 +94,11 @@
     <img src="/images/BMW_Holo.jpg">
   </div>
         
+  <iframe src="https://player.vimeo.com/video/325609926" width="640" height="267" 
+    frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <p><a href="https://vimeo.com/325609926">
+        
+
   <div id="over" class="">
     <img src="/images/JorssenNoord.jpg">
   </div>
