Adding projects, img and vid

--- a/index.html
+++ b/index.html
@@ -60,11 +60,16 @@
 
     <div class="container divider"></div>
     <!-- END INTRODICTION -->
-
+<!--
     <section class="global-headline animate-top">
-        <ul class="skills-flex-container">
+     <div class="wrapper skills-flex-container">
+          
+            <div>
             <h1 class="headline headline-dark">Let's make something amazing</h1>
-        <li class="skill-flex">
+        </div>
+
+        <div>
+        <li class="second.half skill-flex ">
             <h1 class="headline headline-dark">3D Design</h1>
                 <p2>
                   Some 3D designs made in Blender or Fusion 360.
@@ -105,37 +110,9 @@
                 </a>
          </li>
  
-    </ul>
+        </div>
     </section>
-       <!-- 
-    <div class="card-group">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-    -->
-   <!-- END SKILLS -->
+-->
 
     <section class="project">
         <div class="project-info">
@@ -206,6 +183,7 @@
         </div>
     </section>
 
+
     <section class="project">
         <div class="project-info alt">
             <div class="project-title animate-left global-headline padding-left padding-right-sm">
@@ -225,6 +203,53 @@
             </div>
         </div>
     </section>
+
+    <section class="project">
+        <div class="project-info">
+            <div class="project-title animate-right global-headline padding-right padding-left-sm">
+                <h1 class="headline headline-dark">Supernova Galaxy shooter AR/VR multiplayer</h1>
+            </div>
+            <div class="project-description animate-right padding-right padding-left-sm">
+                <p>
+                    In Technopolis neem je niet alleen een virtuele duikvlucht, je gaat letterlijk de lucht in. Een grijparm heft het harnas op waar je met een VR-bril in zit. Naast het prachtige landschap dat je in virtual reality ziet, voel je ook wind. Je stuurt makkelijk zelf. Je begint op een berg en vliegt tot aan een waterval. Daarna kan je kiezen: rechtdoor, rechts of links. Zo vlieg je verder langs hoge bergtoppen, diepe wateren en mysterieuze kastelen. De beleving duurt ongeveer twee minuten, zelfs al crash je onderweg
+                </p>
+                <a href="./projects/Technopolis/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-left">
+                <iframe src="https://player.vimeo.com/video/294163053" width="100%" height="100%" frameborder="0"
+                allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <section class="project">
+        <div class="project-info">
+            <div class="project-title animate-right global-headline padding-right padding-left-sm">
+                <h1 class="headline headline-dark">Electrical Board VR training</h1>
+            </div>
+            <div class="project-description animate-right padding-right padding-left-sm">
+                <p>
+                    In Technopolis neem je niet alleen een virtuele duikvlucht, je gaat letterlijk de lucht in. Een grijparm heft het harnas op waar je met een VR-bril in zit. Naast het prachtige landschap dat je in virtual reality ziet, voel je ook wind. Je stuurt makkelijk zelf. Je begint op een berg en vliegt tot aan een waterval. Daarna kan je kiezen: rechtdoor, rechts of links. Zo vlieg je verder langs hoge bergtoppen, diepe wateren en mysterieuze kastelen. De beleving duurt ongeveer twee minuten, zelfs al crash je onderweg
+                </p>
+                <a href="./projects/Technopolis/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-left">
+                <iframe src="https://player.vimeo.com/video/361761071" width="100%" height="100%" frameborder="0"
+                allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+ 
 
 
     <section class="project">
@@ -251,27 +276,57 @@ kan schakelen. En de leerkracht virtueel les kan geven.
         </div>
     </section>
 
+
     <section class="project">
-        <div class="project-info">
-            <div class="project-title animate-right global-headline padding-right padding-left-sm">
+        <div class="project-info alt">
+            <div class="project-title animate-left global-headline padding-left padding-right-sm">
                 <h1 class="headline headline-dark">Nostalgeo</h1>
             </div>
-            <div class="project-description animate-right padding-right padding-left-sm">
+            <div class="project-description animate-left padding-left padding-right-sm">
                 <p>
                     Nostalgeo is een product van Nazka Mapps dat zich specialiseert in slimme kaarten, 
                     interactieve kaarttoepassingen en ruimtelijke analyse. 
                     Naast Nostalgeo is het ook de drijvende kracht achter Aircheckr.com en andere digitale kaarttoepassingen.
                 </p>
-                <a href="./projects/Nostalgeo/index.html" class="btn body-btn">
+                <a href="./projects/ZF/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
                     See project
                 </a>
             </div>
-            <div class="project-img animate-left">
-                <img src="images/nostalgeo.png" alt="Picture of Nostalgeo" />
+            <div class="project-img animate-right">
+                <iframe src="https://player.vimeo.com/video/294163053" width="100%" height="100%" frameborder="0"
+    allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
         </div>
     </section>
+
+
+
+    <section class="project">
+        <div class="project-info alt">
+            <div class="project-title animate-left global-headline padding-left padding-right-sm">
+                <h1 class="headline headline-dark">Virtual office</h1>
+            </div>
+            <div class="project-description animate-left padding-left padding-right-sm">
+                <p>
+                   Take a virtual look inside the RMDY office building
+                </p>
+                <a href="./projects/DiagnoseCar/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    Similar projects
+                </a>
+            </div>
+            <div class="project-img animate-right">
+                <iframe src="https://player.vimeo.com/video/244617325" width="100%" height="100%" frameborder="0"
+                allow="autoplay; fullscreen" allowfullscreen iframe\>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
     <!-- END PROJECT SECTON -->
     <ul class="logos-flex-container">
         <li class="logos-flex-item flex-item img">
