--- a/projects/Abilitee/index.html
+++ b/projects/Abilitee/index.html
@@ -38,7 +38,7 @@
 
     <section class="project-details">
         <div class="container project-detail-description">
-            <h1 class="headline headline-dark intro-title">BMW AR Application</h1>
+            <h1 class="headline headline-dark intro-title">Summary</h1>
 
             <p class="animate-right intro">
                 Full summary text, large amount of text that explains the project and other stuff.
@@ -56,28 +56,35 @@
                 <p class="contributions label">Contribution</p>
 
                 <ul class="contributions fix">
+                    <li>Prototyping</li>
                     <li>UX/UI</li>
                     <li>Unity Development</li>
                     <li>3D modelling</li>
                     <li>3D texturing</li>
-                    <li>Animation</li>
                 </ul>
             </div>
         </div>
     </section>
 
-    <div class="container divider"></div>
+
 
     <section>
         <div class="container project-media-list">
             <img class="animate-left" src="/images/Abilitee.png">
 
             <div class="embed-container animate-right">
-                <iframe src="https://player.vimeo.com/video/325609926" width="100%" height="100%" frameborder="0"
+                <iframe src="https://player.vimeo.com/video/349032113" width="100%" height="100%" frameborder="0"
                     allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
 
             <img class="animate-left" src="/images/Abilitee_Event.jpg">
+
+
+            <div class="embed-container animate-right">
+                <iframe src="https://player.vimeo.com/video/408895517" width="100%" height="100%" frameborder="0"
+                    allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+
 
             <img class="animate-right" src="/images/Abilitee.png">
         </div>
