--- a/projects/Technopolis/index.html
+++ b/projects/Technopolis/index.html
@@ -32,7 +32,7 @@
 
     <section class="global-headline animate-top">
         <div class="container">
-            <h1 class="titleproject">Abilitee training simulator</h1>
+            <h1 class="titleproject">Technopolis Paraglide VR</h1>
         </div>
     </section>
 
@@ -41,9 +41,7 @@
             <h1 class="headline headline-dark intro-title">Summary</h1>
 
             <p class="animate-right intro">
-                Full summary text, large amount of text that explains the project and other stuff.
-                Full summary text, large amount of text that explains the project and other stuff.
-                Full summary text, large amount of text that explains the project and other stuff.
+                Parapente VR experience for Technopolis Belgium
             </p>
 
             <h1 class="headline headline-dark my-work-title">Sprint</h1>
@@ -76,11 +74,18 @@
                     allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
 
+            <div class="embed-container animate-right">
+                <iframe src="https://player.vimeo.com/video/325609769" width="100%" height="100%" frameborder="0"
+                    allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+
             <img class="animate-left" src="/images/Abilitee_Event.jpg">
 
             <img class="animate-right" src="/images/Abilitee.png">
         </div>
     </section>
+
+
     <!-- END INTRODICTION -->
 
     <script src="main.js"></script>
